# 3rdparty

VHGPUImage/: VHBeautifyFilter.cpp  VHBeautifyFilter.h  VHBeautifyRender.cpp  VHBeautifyRender.h  VHGPUImageBrightnessFilter.cpp  VHGPUImageBrightnessFilter.h  VHGPUImageFilter.cpp  VHGPUImageFilter.h  VHOpenGLUtil.h  VHRunnable.cpp  VHRunnable.h  VHShaderUtil.cpp  VHShaderUtil.h  log.h
VHGPUImage/wglContext/: VHGLContext.cpp  VHGLContext.h  VHOpenGLBase.cpp  VHOpenGLBase.h
VhallNetWork/VhallNetWork/: VhallNetWork.sln
common/: AlertDlg.cpp  AlertDlg.h  BandwidthCheck.cpp  BandwidthCheck.h  BufferQueue.cpp  BufferQueue.h  CLineEditInput.cpp  CLineEditInput.h  CPaintStateBtn.cpp  CPaintStateBtn.h  CRC32.cpp  CRC32.h  ComboBox.cpp  ComboBox.h  ComboBoxItem.cpp  ComboBoxItem.h  ConfigSetting.cpp  ConfigSetting.h  Defs.h  ExceptionDump.cpp  ExceptionDump.h  HttpProxyGet.cpp  HttpProxyGet.h  Logging.cpp  Logging.h  Mixer.cpp  Mixer.h  PublishInfo.cpp  PublishInfo.h  QGGChatComboBox.cpp  QGGChatComboBox.h  SocketClient.cpp  SocketClient.h  TitleWidget.cpp  TitleWidget.h  ToolButton.cpp  ToolButton.h  UACUtility.cpp  UACUtility.h  UpLoader.cpp  (+73 more)
common/Utility/: Alloc.h  ComPtr.hpp  ComQIPtr.hpp  ConfigFile.cpp  DebugAlloc.cpp  FastAlloc.cpp  Profiler.cpp  Template.h  XConfig.cpp  XConfig.h  XFile_Windows.cpp  XMath.cpp  XMath.h  XString.cpp  XString.h  XT.cpp  XT.h  XTLocalization.cpp  XTLocalization.h  XT_Windows.cpp  XT_Windows.h
common/baseclass/: BaseThread.h  CRMemPoolBase.h  CRPluginDef.h  GlobalMemPoolBlock.cpp  GlobalMemPoolBlock.h  MemPoolBase.h  PluginBase.cpp  PluginBase.h  Singleton.h  pathManage.cpp  pathManage.h  pathmanager.cpp  pathmanager.h
common/def/: MediaDefs.h  VHComPtr.h  VHP_StruDeff.h  VH_ConstDeff.h  VH_Error.h  VH_IUnknown.h  VH_Macro.h  VH_TypeDeff.h
common/interface/: IAudioCapture.h  IAudioFilter.h  ICommonData.h  IDShowPlugin.h  IDeckLinkDevice.h  IDeviceManager.h  IGraphics.h  IMainUILogic.h  IMediaCore.h  IMediaOutput.h  IMediaReader.h  IMessageDispatcher.h  IOBSControlLogic.h  IPluginManager.h  ISettingLogic.h  IUIThreadManager.h  IVedioPlayLogic.h
common/lib/: MessageDispatcherD.lib  MessageDispatcherR.lib  PluginManagerD.lib  PluginManagerR.lib
common/message/: Msg_CommonToolKit.cpp  Msg_CommonToolKit.h  Msg_MainUI.cpp  Msg_MainUI.h  Msg_OBSControl.cpp  (+3 more)
lib_json/: json.cc
media_reader/: BufferQueue.cpp  BufferQueue.h  IMediaOutput.h  IMediaPlayer.h  IMediaReader.h  Logging.cpp  Logging.h  MediaPlayerImpl.cpp  MediaPlayerImpl.h  MediaReader.cpp  MediaReader.h  MediaReader.sln  MediaReader.vcxproj  MediaReader.vcxproj.filters  ReadMe.txt  dllmain.cpp  stdafx.cpp  vlc.h
socketio/: CMakeLists.txt
vhall_live_core/: VhallLiveCore.sln
vhall_live_core/vhall_media_core/: CMakeLists.txt  README.build  README.md
vhall_live_core/vhall_media_core/api/: live_interface.h  vhall_live.cpp  vhall_live.h  vhall_live_api.cpp  vhall_live_api.h
vhall_live_core/vhall_media_core/audioprocess/: noise_cancelling.cpp  noise_cancelling.h  noise_suppression_packing.cpp  noise_suppression_packing.h
vhall_live_core/vhall_media_core/common/: CMakeLists.txt  auto_lock.h  live_define.h  live_event_def.h  live_get_status.h  live_message.h  live_obs.h  live_open_define.cpp  live_open_define.h  live_status_listener.h  live_status_listener_Impl.h  live_status_listener_impl.cpp  live_sys.cpp  live_sys.h  safe_buffer_data.cpp  safe_buffer_data.h  time_buffer_cycle_queue.cpp  time_buffer_cycle_queue.h  time_buffer_queue.cpp  time_buffer_queue.h  vhall_log.cpp  vhall_log.h
vhall_live_core/vhall_media_core/decoder/: Decoder.h  aac_decoder.cpp  aac_decoder.h  h264_decoder.cpp  h264_decoder.h  hw_decoder.cpp  hw_decoder.h  media_decode.cpp  media_decode.h
vhall_live_core/vhall_media_core/demuxers/: demuxer_interface.h  demuxer_sink_interface.h  http_flv_demuxer.cpp  http_flv_demuxer.h  rtmp_reader.cpp  rtmp_reader.h
vhall_live_core/vhall_media_core/dispatchplay/: dispatch_switch.cpp  dispatch_switch.h
vhall_live_core/vhall_media_core/encoder/: aac_encoder.cpp  aac_encoder.h  avc_encode_interface.h  encode_interface.h  encoder_info.h  h264_encoder.cpp  h264_encoder.h  media_data_send.h  media_encode.cpp  media_encode.h  x264_encoder.cpp  x264_encoder.h
vhall_live_core/vhall_media_core/muxers/: media_muxer.cpp  media_muxer.h  media_muxer_interface.h  muxer_interface.cpp  muxer_interface.h  srs_flv_recorder.cpp  srs_flv_recorder.h  srs_http_flv_streamer.cpp  srs_http_flv_streamer.h  srs_http_handler.cpp  srs_http_handler.h  srs_rtmp_publisher.cpp  srs_rtmp_publisher.h  time_jitter.cpp  time_jitter.h
vhall_live_core/vhall_media_core/os/: monitor_define.h  vhall_monitor_log.cpp  vhall_monitor_log.h  vhall_play_monitor_log.cpp  vhall_play_monitor_log.h
vhall_live_core/vhall_media_core/ratecontrol/: buffer_state.h  rate_control.cpp  rate_control.h
vhall_live_core/vhall_media_core/rtmpplayer/: README.md  ReadMe.txt  buffer_queue.cpp  buffer_queue.h  media_notify.h  media_render.cpp  media_render.h  vhall_live_player.cpp  vhall_live_player.h
vhall_live_core/vhall_media_core/rtmppush/: audio_output_ts.cpp  audio_output_ts.h  timestamp_sync.cpp  timestamp_sync.h  vhall_live_push.cpp  vhall_live_push.h
vhall_live_core/vhall_media_core/test/: api_test.cc  encoder_test.cc  rtmp_play_test.cc  rtmp_push_test.cc
vhall_live_core/vhall_media_core/utility/: CMakeLists.txt  audio_resamples.cpp  audio_resamples.h  byte_stream.cpp  byte_stream.h  crc32.cpp  crc32.h  data_combine_split.cpp  data_combine_split.h  http_request.cpp  http_request.h  image_text_mixing.cpp  image_text_mixing.h  rtmp_amf0.cpp  rtmp_amf0.h  rtmp_flv_utility.cpp  rtmp_flv_utility.h  singleton.cpp  singleton.h  sps_pps.c  sps_pps.h  timer.cpp  timer.h  utility.cpp  utility.h
vhall_live_core/vhall_media_core/voicetransition/: readme.txt  voice_dictate_packing.cpp  voice_dictate_packing.h  voice_transition.cpp  voice_transition.h
vhall_voice_change/: AudioBuffer.cpp  AudioBuffer.h  README.md  VoiceChange.cpp  VoiceChange.h  VoiceChangeExample.cpp
video_process/: CMakelists.txt  README.md
(+222 files in other folders)
